--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="flower-container"></div>
     <!-- Header Section -->
     <header class="bg-gradient text-white text-center py-5">
-        <h1 class="display-4">Happy Birthday! Shruti 🎂</h1>
+        <h1 class="display-4">Happy Birthday! 🎂</h1>
         <p class="lead">Wishing you a day filled with love, joy, and all your favorite things.</p>
     </header>
 
@@ -93,7 +93,7 @@
         <!-- Send Replies Section -->
         <section class="text-center">
             <h2 class="mb-4">Send Your Replies</h2>
-            <form action="https://formsubmit.co/kumaralokunofficial2003@gmail.com" method="POST">
+            <form action="https://formsubmit.co/bea6de747cd545957fc0e52b4e2fe477" method="POST">
             <div class="card w-50 mx-auto p-4">
                 <textarea class="form-control mb-3" rows="3" placeholder="Write your birthday replies here..."></textarea>
                 <button class="btn btn-primary">Send Replies</button>
