--- a/index.html
+++ b/index.html
@@ -93,18 +93,18 @@
         <!-- Send Replies Section -->
         <section class="text-center">
             <h2 class="mb-4">Send Your Replies</h2>
-            <form action="https://formsubmit.co/bea6de747cd545957fc0e52b4e2fe477" method="POST">
-            <div class="card w-50 mx-auto p-4">
-                <textarea class="form-control mb-3" rows="3" placeholder="Write your birthday replies here..."></textarea>
+            <form action="https://formspree.io/f/xzzpwwed" method="POST">
+            <!-- <div class="card w-50 mx-auto p-4"> -->
+                <input type="text" name="name"  class="form-control mb-3" rows="3" placeholder="Write your birthday replies here...">
                 <button class="btn btn-primary">Send Replies</button>
-            </div>
+            <!-- </div> -->
         </form>
         </section>
     </main>
 
     <!-- Footer -->
     <footer class="bg-gradient text-white text-center py-4">
-        <p>With love, from Alok(Sarfira)</p>
+        <p>With love, from Alok</p>
     </footer>
 
     <!-- Bootstrap JS, Popper.js, and jQuery -->
