--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="flower-container"></div>
     <!-- Header Section -->
     <header class="bg-gradient text-white text-center py-5">
-        <h1 class="display-4">Happy Birthday! 🎂</h1>
+        <h1 class="display-4">Happy Birthday Shruti !🤗🎂</h1>
         <p class="lead">Wishing you a day filled with love, joy, and all your favorite things.</p>
     </header>
 
@@ -87,12 +87,15 @@
         <!-- Personalized Message -->
         <section class="text-center my-5">
             <h2 class="mb-4">A Special Message for You</h2>
-            <p class="lead">May your day be as bright and beautiful as you are. Here's to a year filled with happiness, success, and all the love your heart can hold!</p>
+            <p class="lead">May your day be as bright and beautiful as you are. Here's to a year filled with happiness, success, and all the love your heart can hold! <br>Kuchh to ulta sidha harkat karna tha ab tum yaha ho nhi to soche website hi banate hai. Now Shayari time...
+              </p>
+              <i><p>"Tumhare saath khamoosh bhi rahu toh baatein puri ho jaati hai,<br>Tum raho mere saath, bas itna kaafi hai, <br>Tumse milkar har din, ek kahani ban jaati hai"</p></i>
         </section>
 
         <!-- Send Replies Section -->
         <section class="text-center">
             <h2 class="mb-4">Send Your Replies</h2>
+            <h6>(Please no boring replies itna mehnat kiya hun tum bhi thora karo, take ur time.)</h6>
             <form action="https://formspree.io/f/xzzpwwed" method="POST">
             <!-- <div class="card w-50 mx-auto p-4"> -->
                 <input type="text" name="name"  class="form-control mb-3" rows="3" placeholder="Write your birthday replies here...">
