--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <p class="lead">May your day be as bright and beautiful as you are. Here's to a year filled with happiness, success, and all the love your heart can hold! <br>Kuchh to ulta sidha harkat karna tha ab tum yaha ho nhi to soche website hi banate hai. Now Shayari time...
               </p>
               <i><p>"Tumhare saath khamoosh bhi rahu toh baatein puri ho jaati hai,<br>Tum raho mere saath, bas itna kaafi hai, <br>Tumse milkar har din, ek kahani ban jaati hai"</p></i>
+              <p class="lead">Last me bas yahi kehna hai ki aise hi positive raho, life me aage badho khoob tarraki karo mahadev tumhari saari manokamna pure kare!</p>
         </section>
 
         <!-- Send Replies Section -->
